// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates selectors .selectDraftTemplate returns draft template 1`] = `
Object {
  "id": "ape",
  "name": "Ape",
  "published": false,
}
`;

exports[`Templates selectors .selectDraftTemplate returns undefined when unknown 1`] = `undefined`;

exports[`Templates selectors .selectDraftTemplatePreview returns preview of draft template 1`] = `
Object {
  "html": "<h1>Southeastern Asia</h1>",
  "subject": "New Location: Come visit me",
}
`;

exports[`Templates selectors .selectDraftTemplatePreview returns undefined when unknown 1`] = `undefined`;

exports[`Templates selectors .selectPublishedTemplate returns published template 1`] = `
Object {
  "id": "ape",
  "name": "Ape",
  "published": true,
}
`;

exports[`Templates selectors .selectPublishedTemplate returns undefined when unknown 1`] = `undefined`;

exports[`Templates selectors .selectPublishedTemplatePreview returns preview of draft template 1`] = `
Object {
  "html": "<h1>Baltimore Zoo</h1>.",
  "subject": "Come visit me",
}
`;

exports[`Templates selectors .selectPublishedTemplatePreview returns undefined when unknown 1`] = `undefined`;

exports[`Templates selectors Templates by id Selector returns empty draft and published 1`] = `
Object {
  "draft": Object {},
  "published": Object {},
}
`;

exports[`Templates selectors Templates by id Selector returns template 1`] = `
Object {
  "draft": Object {},
  "published": Object {},
}
`;

exports[`Templates selectors cloneTemplate clones template 1`] = `
Object {
  "content": Object {},
  "id": "test-template-copy",
  "name": "Test Template Copy",
  "published": false,
}
`;

exports[`Templates selectors getClonedTemplate should clone template if :id exist in state 1`] = `
Object {
  "id": "ape-copy",
  "name": "Ape Copy",
  "published": false,
}
`;

exports[`Templates selectors getClonedTemplate should not clone template if :id does not exist 1`] = `undefined`;

exports[`Templates selectors selectDefaultTestData should return default test data 1`] = `
"{
  \\"substitution_data\\": {},
  \\"metadata\\": {},
  \\"options\\": {}
}"
`;

exports[`Templates selectors selectDomainsBySubaccount should return domains for a specific subaccount 1`] = `
Array [
  Object {
    "domain": "shared.com",
    "shared_with_subaccounts": true,
    "status": Object {
      "compliance_status": "valid",
      "ownership_verified": true,
    },
  },
  Object {
    "domain": "assignedToSub.com",
    "status": Object {
      "compliance_status": "valid",
      "ownership_verified": true,
    },
    "subaccount_id": 101,
  },
]
`;

exports[`Templates selectors selectDomainsBySubaccount should return domains with no subaccount filter 1`] = `
Array [
  Object {
    "domain": "shared.com",
    "shared_with_subaccounts": true,
    "status": Object {
      "compliance_status": "valid",
      "ownership_verified": true,
    },
  },
  Object {
    "domain": "masterOnly.com",
    "status": Object {
      "compliance_status": "valid",
      "ownership_verified": true,
    },
  },
]
`;

exports[`Templates selectors selectPublishedTemplates should return a list 1`] = `
Array [
  Object {
    "has_published": true,
    "name": "publishedSubaccount",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedMaster",
    "shared_with_subaccounts": false,
    "subaccount_id": 0,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`Templates selectors selectPublishedTemplatesBySubaccount should return published templates for a specific subaccount 1`] = `
Array [
  Object {
    "has_published": true,
    "name": "publishedSubaccount",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`Templates selectors selectPublishedTemplatesBySubaccount should return published templates for master account 1`] = `
Array [
  Object {
    "has_published": true,
    "name": "publishedMaster",
    "shared_with_subaccounts": false,
    "subaccount_id": 0,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`Templates selectors selectPublishedTemplatesBySubaccount should return published templates if no subaccounts exist 1`] = `
Array [
  Object {
    "has_published": true,
    "name": "publishedSubaccount",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedMaster",
    "shared_with_subaccounts": false,
    "subaccount_id": 0,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;

exports[`Templates selectors selectTemplateTestData should return default data 1`] = `
"{
  \\"substitution_data\\": {},
  \\"metadata\\": {},
  \\"options\\": {}
}"
`;

exports[`Templates selectors selectTemplateTestData should return test data 1`] = `
"{
  \\"test\\": \\"data\\"
}"
`;

exports[`Templates selectors selectTemplates should return a list 1`] = `
Array [
  Object {
    "has_published": false,
    "name": "unpublished",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedSubaccount",
    "shared_with_subaccounts": false,
    "subaccount_id": 101,
  },
  Object {
    "has_published": true,
    "name": "publishedMaster",
    "shared_with_subaccounts": false,
    "subaccount_id": 0,
  },
  Object {
    "has_published": true,
    "name": "publishedShared",
    "shared_with_subaccounts": true,
    "subaccount_id": 0,
  },
]
`;
